--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Change to terraform directory
+
+      - name: Change to terraform directory for vpc config
         run: |
           cd ../terraform
       - name: Setup Terraform
