--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,7 +16,9 @@ jobs:
 
       - name: Change to terraform directory for vpc config
         run: |
+          pwd
           cd terraform
+          pwd
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
