--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform"
+    name: "Terraform infrastructure"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
