--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           docker push 809031430406.dkr.ecr.us-west-2.amazonaws.com/ibm-rest-api:latest
 
       - name: Pull mysql image to ECR
-        id: build persistent storage
+        id: build-persistent-storage
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
